objects/Customer_Survey_Result__c.object
<CustomObject>
    <fields>
        <fullName>PM_Satisfaction__c</fullName>
        <description>Commercial:
Added as part of Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Satisfaction with Overall Project Management?  (1 = Very Dissatisfied to 5 = Very Satisfied)</inlineHelpText>
        <label>PM Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Panel_Appearance__c</fullName>
        <inlineHelpText>I like how the panels look on my roof</inlineHelpText>
        <label>Panel Appearance</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Theater__c</fullName>
        <formula>TEXT(Partner_Account__r.Theater__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>M-D field to tie Partners and their surveys</description>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Survey Results</relationshipLabel>
        <relationshipName>Customer_Survey_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Comments__c</fullName>
        <label>Partner Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Commitments__c</fullName>
        <description>Numerical value 0 through 10</description>
        <inlineHelpText>How well your dealer met their commitments to you?</inlineHelpText>
        <label>Partner Commitments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Communications__c</fullName>
        <inlineHelpText>Dealer&apos;s communication of the project&apos;s progress</inlineHelpText>
        <label>Partner Communications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Expectations__c</fullName>
        <description>Numerical value 0 through 10</description>
        <inlineHelpText>How well your dealer set expectations with you (0-10 scale)?</inlineHelpText>
        <label>Partner Expectations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Responsiveness__c</fullName>
        <description>Numerical value 0 through 10</description>
        <inlineHelpText>Accessibility and responsiveness of your dealer</inlineHelpText>
        <label>Partner Responsiveness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Service__c</fullName>
        <label>Partner Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Proactive__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Proactive notification of unplanned downtime</inlineHelpText>
        <label>Proactive</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Professionalism__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Professionalism of SunPower or subcontracted maintenance personnel</inlineHelpText>
        <label>Professionalism</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectCoordinatorEmail__c</fullName>
        <description>Please refer Case# 00461746 created as per Kristel Wickham request.</description>
        <label>Project Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Coordinator_Email__c</fullName>
        <description>Case 00437348  Requested by Kristel Wickham.</description>
        <formula>Opportunity_ID__r.Project_Coordinator__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Coordinator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Coordinator_Name__c</fullName>
        <description>Case 00437348  Requested by Kristel Wickham.</description>
        <formula>Opportunity_ID__r.Project_Coordinator__r.FirstName + &quot; &quot; + Opportunity_ID__r.Project_Coordinator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Coordinator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Clarity_and_Detail__c</fullName>
        <inlineHelpText>Clarity and detail of the proposal (for Cash) / 6d. Explanation of the lease agreement terms (for Lease)</inlineHelpText>
        <label>Proposal Clarity and Detail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchasing_Negotiation_Comments__c</fullName>
        <description>Commercial:
Field added as part of the new Commercial Customer Survey 
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Please enter any additional comments about Purchasing and Negotiation.</inlineHelpText>
        <label>Purchasing/Negotiation Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quality_and_Clarity__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Quality and clarity of Energy Production Performance Reports</inlineHelpText>
        <label>Quality and Clarity</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Email__c</fullName>
        <description>Case 00404402 Request by Kristel Wickham</description>
        <formula>Partner_Account__r.RSM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Name__c</fullName>
        <formula>Partner_Account__r.RSM__r.FirstName + &quot; &quot; +  Partner_Account__r.RSM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred__c</fullName>
        <inlineHelpText>Did someone refer you to SunPower? If so, how?</inlineHelpText>
        <label>Referred?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repeat_Purchase_Text__c</fullName>
        <description>Commercial:
Added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why did you give that rating?</inlineHelpText>
        <label>Repeat Purchase Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Repeat_Purchase__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How likely are you to recommend your organization to purchase additional contracts for SunPower systems? (0 = Not at all likely to 10 = Extremely likely)</inlineHelpText>
        <label>Repeat Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repurchase_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why did you give that rating?</inlineHelpText>
        <label>Repurchase Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Repurchase__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How likely are you to recommend your company to purchase additional products or systems from SunPower? 0 (Not at all likely) to 10 (Extremely likely)</inlineHelpText>
        <label>Repurchase</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Respondent_Incentive__c</fullName>
        <label>Respondent Incentive</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_on_Investment_Evaluation_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Do you have all relevant information needed from SunPower to easily perform this analysis?</inlineHelpText>
        <label>Return on Investment Evaluation Text</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return_on_Investment_Evaluation__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 1026
PO: Miltos Vratimos</description>
        <inlineHelpText>Does your company regularly evaluate return on investment of your SunPower portfolio?</inlineHelpText>
        <label>Return on Investment Evaluation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return_on_Investment_Satisfaction_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>Return on Investment Satisfaction Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_on_Investment_Satisfaction__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with the overall return on Investment of your full portfolio of SunPower systems? (0 - Extremely dissatisfied, 10 - Extremely satisfied)</inlineHelpText>
        <label>Return on Investment Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPWR_Advocacy_Text__c</fullName>
        <description>Commercial:
Added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why did you give that rating?</inlineHelpText>
        <label>SPWR Advocacy Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPWR_Advocacy__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How likely are you to recommend SunPower to a colleague or others? 0 (Not at all likely) to 10 (Extremely likely)</inlineHelpText>
        <label>SPWR Advocacy</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SP_Technical_Expertise_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>SP Technical Expertise Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SP_Technical_Expertise__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with the level of technical expertise of SunPower staff? (0 – Very Dissatisfied - 5 – Very satisfied)</inlineHelpText>
        <label>SP Technical Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Answers__c</fullName>
        <inlineHelpText>Salesperson&apos;s ability to answer questions in an easy to understand way</inlineHelpText>
        <label>Sales Answers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Knowledge__c</fullName>
        <inlineHelpText>Quality and depth of Salesperson&apos;s knowledge</inlineHelpText>
        <label>Sales Knowledge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Needs__c</fullName>
        <inlineHelpText>Salesperson&apos;s understanding of your needs</inlineHelpText>
        <label>Sales Needs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_and_Quotation_process__c</fullName>
        <label>Sales and Quotation process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Construction_Management__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Site Construction Management</inlineHelpText>
        <label>Site Construction Management</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Coordination__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Coordination of onsite maintenance</inlineHelpText>
        <label>Site Coordination</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Management_Coordination_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>Site Management &amp; Coordination Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Management_Coordination__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with the site management and coordination with your staff during construction?  (0 = Very Dissatisfied to 5 = Very Satisfied)</inlineHelpText>
        <label>Site Management &amp; Coordination</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Management_Mitigation_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Did you feel the team effectively minimized negative impact to your sites?</inlineHelpText>
        <label>Site Management Mitigation Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Organization__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Site cleanliness, organization and control of materials on site</inlineHelpText>
        <label>Site Organization</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Safety_EPC__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with our site safety protocol and management?</inlineHelpText>
        <label>Site Safety - EPC</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Safety_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>Site Safety Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Safety__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Thinking about the Design and Construction phase, how satisfied are you with the following? Starting with: Site Safety.</inlineHelpText>
        <label>Site Safety</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Change__c</fullName>
        <label>Solution Change</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Technical_Expertise_Text__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39  - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>Why?</inlineHelpText>
        <label>Subcontractor Technical Expertise Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Technical_Expertise__c</fullName>
        <description>Commercial:
Field added as part of new Commercial Customer Survey
WW39 - 2016
PO: Miltos Vratimos</description>
        <inlineHelpText>How satisfied are you with the level of technical expertise of subcontractor staff?    (0 – Very Dissatisfied - 5 – Very satisfied)</inlineHelpText>
        <label>Subcontractor Technical Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Link__c</fullName>
        <label>Survey Link</label>
        <type>Url</type>
    </fields>
</CustomObject>